Layout problems for desktop fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -213,8 +213,18 @@
     grid-row: 1/3;
   }
 
+  .decorated-zone::before {
+    inset-inline-end: 20px;
+    inset-block-start: 20px;
+  }
+  
+  .decorated-zone::after {
+    inset-inline-start: 20px;
+    inset-block-end: 20px;
+  }
+
   .header {
-    margin: 20px;
+    padding: 20px;
   }
 
   .header__title {
@@ -223,7 +233,8 @@
   }
 
   .content {
-    margin: 20px;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
   }
 
   .content__block {
@@ -277,8 +288,8 @@
   }
 
   .footer {
-    margin: 20px;
-    margin-block-start: 60px;
+    padding: 20px;
+    margin-block-start: 40px;
   }
 
   .footer__title {
